--- a/plants/public/index.html
+++ b/plants/public/index.html
@@ -10,6 +10,10 @@
       integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ=="
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courgette&family=Raleway&display=swap"
+      rel="stylesheet"
+    />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
